p2/confs/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one-selec
  template:
    metadata:
      labels:
        app: app-one-selec
    spec:
      containers:
        - name: app-one-container
          image: nginx:stable-trixie
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app-one-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one-volume
          configMap:
            name: app-one-files

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two-selec
  template:
    metadata:
      labels:
        app: app-two-selec
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app-two-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-two-volume
          configMap:
            name: app-two-files

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three-selec
  template:
    metadata:
      labels:
        app: app-three-selec
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app-three-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three-volume
          configMap:
            name: app-three-files
