p2/confs/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one-selec
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  clusterIP: 10.43.171.213

---

apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two-selec
  ports:
    - port: 80
      targetPort: 80
  clusterIP: 10.43.193.160

---

apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three-selec
  ports:
    - port: 80
      targetPort: 80
  clusterIP: 10.43.229.156
